--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -50,15 +50,15 @@ databaseChangeLog:
               - column:
                   name: parkingSpaces
                   type: integer
-                  constrains:
+                  constraints:
                     nullable: false
               - column:
                   name: freeParkingSpaces
                   type: integer
-                  constrains:
-                  nullable: false
+                  constraints:
+                    nullable: false
               - column:
                   name: timestamp
                   type: timestamp
-                  constrains:
-                  nullable: false
+                  constraints:
+                    nullable: false
